Updated page title in "index.html".

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Menu Project - Leow Kean Tat (Kaz), Master ver. (Vite + React)</title>
+  <title>Menu Project (Page Layout) - Leow Kean Tat (Kaz)</title>
 </head>
 
 <body>
